# FlaFludeAgentes

./: .env.example  .gitignore  ENHANCED_LOGGING_SYSTEM.md  README.md  a2a_orchestrator_old.py  a2a_system.py  adk_agents_old.py  adk_utils_old.py  agents.py  app.py  app_adk.py  main.py  prompts.py  pyproject.toml  start_a2a_servers.py  start_a2a_servers_old.py  test_logging_system.py  test_system.py
debate_system/: __init__.py  agent.py
deployment/: vertex_ai_deploy.py
eval/: debate_evaluation.py
flamengo_agent/: __init__.py  agent.py
fluminense_agent/: __init__.py  agent.py
researcher_agent/: __init__.py  agent.py
supervisor_agent/: __init__.py  agent.py
tests/: test_agents.py
utils/: __init__.py  enhanced_logger.py  log_viewer.py
